# PLM

./: .gitignore  AirPlus_Process_Mining_Analysis.ipynb  REACT_FLOW_README.md  README.md  analyze_data.py  api_server.py  explore_workflow.py  main.py  pyproject.toml  start.ps1  streamlit_app.py  workflow_data.json
aircraft-workflow/: NOUVELLES_FONCTIONNALITES.md  README.md  index.html  package-lock.json  package.json  workflow_data.json
aircraft-workflow/src/: App.jsx
aircraft-workflow/src/components/: AnalyticsDashboard.jsx  DetailPanel.jsx  EmployeeDetailModal.jsx  EmployeeDirectory.jsx  IshikawaDashboard.jsx  MissingParts.jsx  PartDetailModal.jsx  PartsDirectory.jsx  PosteNode.jsx  ProductionPlanning.jsx  RecommendationAffectation.jsx  StageNode.jsx
data/: AirPlus_Analysis_Results.xlsx  AirPlus_Summary_Reports.xlsx
react_flow/: workflow.html
