[project]
name = "plm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pillow>=11.1.0",
    "plotly>=6.5.0",
    "networkx>=3.6",
]
